--- a/src/game-table/game-table.css
+++ b/src/game-table/game-table.css
@@ -27,7 +27,7 @@ body {
 }
 
 .line {
-    background-color: rgba(0, 255, 34, 0.925);
+    background-color: rgba(3, 175, 26, 0.925);
     position: absolute;
 }
 
@@ -42,6 +42,10 @@ body {
     width: 96%;
     height: 5%;
 }
+.line-5, .line-6 {
+    width: 4%;
+    height: 95%;
+}
 
 .line-1 {
     left: 13%;
@@ -54,6 +58,14 @@ body {
 }
 .line-4 {
     top: 13%;
+}
+.line-5 {
+    left: 48%;
+    transform: skew(45deg, -45deg); 
+}
+.line-6 {
+    right: 48%;
+    transform: skew(-45deg, 45deg);
 }
 .line-7 {
     top: 47%;
